--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body dir="rtl">
-    <nav id="top-nav" class="navbar navbar-expand-lg navbar-dark">
+    <nav id="top-nav" class="navbar navbar-expand-lg navbar-dark p-0 m-0">
         <div class="my-container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#"><img src="./images/icons/i1.png" width="140" /></a>
             <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,19 +23,19 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <!-- <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li> -->
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100" src="./images/slidebar/1.jpg" alt="First slide">
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
                 <img class="d-block w-100" src="./images/slidebar/2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="./images/slidebar/3.jpg" alt="Third slide">
-            </div>
+            </div> -->
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -91,8 +91,11 @@
                     <h4 class="titles">تند خوانی</h4>
                     <div class="gold-border"></div>
                     <div class="description">
-                        گر مدرس یا مشاور هستید و به دنبال رشد کسب و کار، آموزش نیرو، تیم سازی حرفه ای و برند سازی موثر
-                        هستید، ما می توانیم به شما کمک کنیم
+                        تندخوانی به انگلیسی Speed reading به
+                        معنی سریع خواندن یا مطالعه در سرعتهای بالا است. در این روش فرد با فراگیری قواعد و تمرین مستمر
+                        آرام آرام به درک و تسلط دست پیدا می.کند پس از یادگیری قوانین افزایش سرعت مطالعه و اصول یادگیری
+                        استاندارد که جزوه الزامات آموزش تندخوانی میباشد فرد به آسانی قادر است تا حجم مطالب قابل توجهی را
+                        در زمان کوتاه ،جذب، درک و در حافظه کوتاه مدت خود ذخیره نماید
                     </div>
                 </div>
                 <div class="article">
@@ -100,8 +103,9 @@
                     <h4 class="titles">توسعه فردی</h4>
                     <div class="gold-border"></div>
                     <div class="description">
-                        گر مدرس یا مشاور هستید و به دنبال رشد کسب و کار، آموزش نیرو، تیم سازی حرفه ای و برند سازی موثر
-                        هستید، ما می توانیم به شما کمک کنیم
+                        توسعه فردی مجموعه فعالیت‌هایی است که برای شناسایی و بهبود استعدادها، پتانسل یادگیری، اشتغال و
+                        حتی ثروت طراحی می‌شود. توسعه شخصی به‌طور خلاصه یعنی تقویت و پرورش هر مهارتی که می‌خواهید برای
+                        بهبود خودتان آن را توسعه دهید.
                     </div>
                 </div>
                 <div class="article">
@@ -109,8 +113,10 @@
                     <h4 class="titles">اعتماد به نفس</h4>
                     <div class="gold-border"></div>
                     <div class="description">
-                        گر مدرس یا مشاور هستید و به دنبال رشد کسب و کار، آموزش نیرو، تیم سازی حرفه ای و برند سازی موثر
-                        هستید، ما می توانیم به شما کمک کنیم
+                        خودباوری یا اعتماد به نفس (به انگلیسی: Self-confidence)، یکی از ویژگی‌های روانی است که شخص در آن
+                        به‌دلیل تجربه‌های قبلی، به توانایی‌ها و استعدادهای خود در موفقیت انجام کارها به‌طور موفقیت‌آمیز
+                        اعتماد و باور دارد. خصوصیت دارا بودن اعتمادِ به خویشتن، نقش حیاتی در توسعه و پیشرفت و موفقیت فرد
+                        دارد.
                     </div>
                 </div>
             </div>
@@ -120,12 +126,13 @@
         <div class="my-container">
             <img src="./images/icons/o1.jpg" />
             <div id="title">
-                <span id="name">سعید میر یونسی</span>
-                <span id="job">مدیر موسسه آموزشی کهکشان</span>
+                <span id="name">میثم نجات خواه</span>
+                <span id="job">مشاور و مدرس و مربی توسعه فردی</span>
             </div>
             <div id="description">
-                از همکاری با مجموعه شما بسیار راضی بودیم. خدمات حرفه‌ای و دلسوزانه‌ای را دریافت کردیم. قدردان زحمات شما
-                هستیم. به امید موفقیت‌های روزافزون شما.
+                دکتر میثم نجات خواه مدیر آکادمی میثم نجات خواه، مشاور تحصیلی
+                مربی توسعه فردی و مربی دوره های تندخوانی و اصول مطالعه
+                قدر دان حمایت شما عزیران هستیم
             </div>
         </div>
     </div>
@@ -151,7 +158,7 @@
             <div class="course">
                 <div class="content">
                     <div class="title">
-                        <img class="mobile-img" src="./images/course/1.jpg">
+                        <img class="mobile-img" src="./images/course/3.jpg">
                         دوره والدین آگاه
                     </div>
                     <div class="description">
@@ -165,12 +172,12 @@
                         می توان استعداد فرزند خود را کشف کرد و آینده ای روشن برایش ساخت.
                     </div>
                 </div>
-                <img class="wide-img" src="./images/course/1.jpg">
+                <img class="wide-img" src="./images/course/3.jpg">
             </div>
             <div class="course">
                 <div class="content">
                     <div class="title">
-                        <img class="mobile-img" src="./images/course/1.jpg">
+                        <img class="mobile-img" src="./images/course/2.jpg">
                         دوره نوجوان قهرمان
                     </div>
                     <div class="description">
@@ -182,7 +189,7 @@
                         کنند.
                     </div>
                 </div>
-                <img class="wide-img" src="./images/course/1.jpg">
+                <img class="wide-img" src="./images/course/2.jpg">
             </div>
         </div>
     </div>
